src/objects/Campaign_Event__c.object
<CustomObject>
    <fields>
        <fullName>Agenda__c</fullName>
        <label>Agenda</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>EA_Campaign__c</referenceTo>
        <relationshipLabel>Campaign Events</relationshipLabel>
        <relationshipName>R00N7000000256A6EAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_to_go__c</fullName>
        <formula>if(Start_Date__c &lt;Now(),0,Start_Date__c -Now())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to go</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duration_Hrs__c</fullName>
        <label>Duration (Hrs)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Parliamentary briefing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-to-one</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Campaign Event</label>
    <nameField>
        <label>Campaign Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>